[package]
name = "docker-engine-adapter"
version = "0.1.0"
authors = ["yuta4j1 <kascado.ys10@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.9"
futures-util = "0.3"
tokio = { version = "0.2", features = ["macros"] }
hyper = "0.13"
hyperlocal = "0.7"
